# cg

./: .gitignore  0c17389f-24ed-49d2-b2c7-ad511ed23636.jfif  5a8335d9-f3ec-4a85-90e2-995195626b69.jfif  615f6233-1397-449b-a310-1aa868c02b0e.jfif  704e29b6-2d5a-4ebc-a17f-d33edc5630f6.jfif  CMakeLists.txt  CenarioOpenGL.cpp  README.md  Teste.cpp  TrabalhoGrade.cpp  camera.h  drawScene.h  leitor_face.py  leitor_obj.py  luz.h  main  main.cpp  main.h  materiais.h  menu.cpp  menu.h  mouse_keyboard.cpp  principal  programaprincipal.cpp  programaprincipal.hpp  renderGL  renderGL.cpp  renderGL2.cpp  testes
Bitmap/: Bitmap.cpp  Bitmap.hpp  BitmapCabecalhoArq.h  BitmapCabecalhoInfo.h
Objeto-blender/: mesa.mtl  quarto-macaco.mtl
OpenGL/: ajuste_faces.py  modelsGL.h  renderGL.cpp
OpenGL/objetos/blend/: paredesblend.blend  quarto.blend  sofa.blend
biblioteca/: Camera.cpp  Camera.hpp  Cenario.cpp  Cenario.hpp  Cilindro.cpp  Cilindro.hpp  Cluster.cpp  Cluster.h  Cone.cpp  Cone.hpp  Cubo.cpp  Cubo.hpp  Esfera.cpp  Esfera.hpp  Luz.cpp  Luz.hpp  LuzAmbiente.cpp  LuzAmbiente.hpp  LuzPontual.cpp  LuzPontual.hpp  LuzRemota.cpp  LuzRemota.hpp  LuzSpot.cpp  LuzSpot.hpp  Material.cpp  Material.hpp  Matriz.cpp  Matriz.hpp  Objeto.cpp  Objeto.hpp  Plano.cpp  Plano.hpp  PontoIntersecao.cpp  PontoIntersecao.hpp  Triangulo.cpp  Triangulo.hpp  Vetor.cpp  Vetor.hpp  biblioteca.cpp  biblioteca.hpp  (+1 more)
objetos/: abajur.h  abajur_suporte.h  almofadas_poltrona.h  almofadas_sofa.h  armario.h  armario_gavetas.h  armario_puxadores.h  arvore.h  arvore_enfeites.h  arvore_tronco.h  arvore_vaso.h  estantes.h  folhas.h  livro1.h  livro2.h  livro3.h  mesas.h  modelsGL.h  paredes.h  piso.h  poltrona.h  quadros1.h  quadros2.h  quadros_fundos.h  quadros_molduras.h  relogio.h  relogio_fundo.h  sofa.h  travesseiro1.h  travesseiro2.h  travesseiro3.h  travesseiro4.h
objetos/blend/: quarto.blend  quarto.blend1  quarto_agrupados.blend
